plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'team-400'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

configurations {
	cucumberRuntime {
		extendsFrom testImplementation
	}
}

dependencies {

	// Spring dependencies
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.h2database:h2'
	implementation 'org.webjars:bootstrap:5.3.2'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'junit:junit:4.13.1'
	testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.cucumber:cucumber-java:7.15.0'
	testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.15.0'
	testImplementation 'io.cucumber:cucumber-spring:7.15.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register("cucumber", Test) {
	testLogging.showStandardStreams = true
	useJUnitPlatform()
	filter {
		includeTestsMatching "nz.ac.canterbury.seng302.gardenersgrove.cucumber.*"
	}
	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
	}
}
tasks.register('cucumberCli') {
	dependsOn assemble, testClasses
	doLast {
		javaexec {
			main = "io.cucumber.core.cli.Main"
			classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
			args = [
					'--plugin', 'pretty',
					'--plugin', 'html:target/cucumber-report.html',
					'--glue', 'com.baeldung.cucumber',
					'src/test/resources']
		}
	}
}
